# CASE-Implementation-ExifTool

./: Makefile  README.md  code.yaml  setup.cfg  setup.py
.github/workflows/: ci.yml  prerelease.yml
case_exiftool/: __init__.py
tests/: .gitignore  Makefile  README.md  requirements.txt
tests/govdocs1/: Makefile  README.md  predicates_discovered.txt
tests/govdocs1/files/000/015/: 000015_printConv.xml  000015_raw.xml  Makefile  analysis.json  analysis.ttl  test_000015.py
tests/govdocs1/files/799/987/: 799987_printConv.xml  799987_raw.xml  Makefile  analysis.json  analysis.ttl  test_799987.py
tests/src/: compact.py
