[metadata]
name = case_exiftool
version = attr: case_exiftool.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = A mapping of ExifTool to CASE
license_files = LICENSE
#TODO - PyPI will need a differently-written README.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Implementation-ExifTool
classifiers =
    Development Status :: 4 - Beta
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
install_requires =
    # TODO - This constraint on pyparsing can be removed when rdflib Issue #1190 is resolved.
    # https://github.com/RDFLib/rdflib/issues/1190
    pyparsing < 3.0.0
    python-dateutil
    rdflib
    requests
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    case_exiftool = case_exiftool:main
