[metadata]
name = case_exiftool
version = attr: case_exiftool.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = A mapping of ExifTool to CASE
license_files = LICENSE
#TODO - PyPI will need a differently-written README.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Implementation-ExifTool
classifiers =
    Development Status :: 4 - Beta
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
install_requires =
    case_utils >= 0.10.0, < 0.11.0
    python-dateutil
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    case_exiftool = case_exiftool:main

[options.package_data]
case_exiftool = py.typed

[flake8]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
extend-ignore =
  E203
  E302
  E501

[isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = black
